fix: scrollbar colors

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -21,6 +21,7 @@ $info: $blue;
 $light: $gray;
 $light-bg: $gray-bg;
 $stroke: #E1E2EA;
+$scrollbar: #D9DADF;
 
 :root {
   --black: #333333;
