--- a/src/assets/styles/utilities/_scrollbar.scss
+++ b/src/assets/styles/utilities/_scrollbar.scss
@@ -8,12 +8,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: $gray-light;
+  background-color: $scrollbar;
   border-radius: 20px;
   border: 6px solid transparent;
   background-clip: content-box;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: $gray;
+  background-color: $gray-light;
 }
